k3s/k3s-trusted/workloads/servarr/bazarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: bazarr
spec:
  selector:
    app: bazarr
  ports:
  - name: http
    port: 6767
    targetPort: 6767
