k3s/k3s-trusted/workloads/servarr/bazarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: bazarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.home.balzers.xyz`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
      middlewares:
        - name: default-headers
  tls:
    secretName: home-balzers-xyz-tls
